update and set new in model